--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       src="https://kit.fontawesome.com/e5941308ac.js"
       crossorigin="anonymous"
     ></script>
-    <title>iNotebook - Your Notes secured in Cloud !</title>
+    <title>JotPad - Your Notes secured in Cloud !</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
